# EN605.617-final-project

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/backends/: CMakeLists.txt  ImageProcessor.h  backends.h
src/backends/cuda/: CudaBackend.cu  CudaBackend.h
src/io/: FORMAT.md  ReadRecording.h
src/playback/: CMakeLists.txt
src/recorder/: CMakeLists.txt  ContextObserver.h  main.cpp  main.cu  recorder.plantuml
src/recorder/backends/: Win32ContextObserver.cpp  Win32ContextObserver.h
src/ui/: CMakeLists.txt  Context.cpp  Context.h
